[package]
name = "protobuf-codegen"
version = "2.8.0"
authors = ["Nick Cameron <nrc@ncameron.org>", "Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/nrc/rust-protobuf/"
repository = "https://github.com/nrc/rust-protobuf/"
description = """
Code generator for rust-protobuf.

Includes a library and `protoc-gen-rust` binary.

See `protoc-rust` and `protobuf-codegen-pure` crates.

A minor fork of https://github.com/stepancheg/rust-protobuf/
"""

[lib]
bench = false

[dependencies]
protobuf = { package = "protobuf", version = "=2.8.0" }
heck = "0.3"

[[bin]]

name = "protoc-gen-rust"
path = "src/bin/protoc-gen-rust.rs"
test = false

[[bin]]

name = "protobuf-bin-gen-rust-do-not-use"
path = "src/bin/protobuf-bin-gen-rust-do-not-use.rs"
test = false

[package.metadata.docs.rs]
all-features = true
